<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/wrongAnswer"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/messageTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/tryAgain"
        android:textSize="25sp"
        android:singleLine="false"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape"
            android:backgroundTint="@color/correctAlternative"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape"
            android:backgroundTint="@color/wrongAlternative"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>